--- a/Ankan/Group_Facilitator_Name.ipynb
+++ b/Ankan/Group_Facilitator_Name.ipynb
@@ -40,26 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "df8888e7-cfce-4e61-b49e-5ad9e22f0d22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0p/s2hsmj5j32l2tpky_c8c91q00000gn/T/ipykernel_10077/129683778.py:1: DtypeWarning: Columns (47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('loan.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('loan.csv')"
+    "df = pd.read_csv('loan.csv',low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "19a4afd0-3161-4e48-9679-748d4ec92c1b",
    "metadata": {},
    "outputs": [
@@ -118,6 +109,44 @@
     "print(df.shape)\n",
     "print(df.info())\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f079c03b-55fe-4c4f-b75a-b285d8ad80f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'member_id', 'loan_amnt', 'funded_amnt', 'funded_amnt_inv',\n",
+       "       'term', 'int_rate', 'installment', 'grade', 'sub_grade',\n",
+       "       ...\n",
+       "       'num_tl_90g_dpd_24m', 'num_tl_op_past_12m', 'pct_tl_nvr_dlq',\n",
+       "       'percent_bc_gt_75', 'pub_rec_bankruptcies', 'tax_liens',\n",
+       "       'tot_hi_cred_lim', 'total_bal_ex_mort', 'total_bc_limit',\n",
+       "       'total_il_high_credit_limit'],\n",
+       "      dtype='object', length=111)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d998844-1ead-45ca-8343-2f1a9f58917e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -213,7 +242,19 @@
    "id": "92a01247-ff3c-4e94-83dd-1f54552d06a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#drop columns which are null completely"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bb11665-ddc9-4358-b16b-abfabff49390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_columns(['tot_hi_cred_lim','total_bal_ex_mort'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
